--- a/netlify.toml
+++ b/netlify.toml
@@ -3,3 +3,11 @@
   from = "/*"
   to = "/"
   status = 200
+
+  [[headers]]
+  # Define which paths this specific [[headers]] block will cover.
+  for = "/*"
+
+  [headers.values]
+    X-Frame-Options = "DENY"
+    X-XSS-Protection = "1; mode=block"
